k8s/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: work-app-service
spec:
  selector:
    app: work-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
