k8s/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service-prod
spec:
  selector:
    app: test-app-nginx-prod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
