k8s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: work-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "NAME.NAMESPACE.k8s-dev.codikup-qa.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: work-app-service
            port:
              number: 80
